--- a/src/index.pug
+++ b/src/index.pug
@@ -2,4 +2,4 @@ head
     title Meganav Link Sorter
 
 body
-    a(href="javascript:(function(){s=document.createElement('script');s.type='text/javascript';s.src='http://localhost:3004/js/main.js?v='+parseInt(Math.random()*99999999);document.body.appendChild(s);st=document.createElement('link');st.rel='text/javascript';st.href='http://localhost:3004/css/global.css?v='+parseInt(Math.random()*99999999);document.body.appendChild(st);})();") Add Bookmarklet
+    a(href="javascript:(function(){s=document.createElement('script');s.type='text/javascript';s.src='http://localhost:3000/js/main.js?v='+parseInt(Math.random()*99999999);document.body.appendChild(s);st=document.createElement('link');st.rel='stylesheet';st.media='all';st.href='http://localhost:3000/css/global.css?v='+parseInt(Math.random()*99999999);document.getElementsByTagName('head')[0].appendChild(st);})();") Add Bookmarklet
