--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,5 @@
 head
     title Meganav Link Sorter
-
+//- change localhost:3000 for the CDN url where the js and CSS will live
 body
     a(href="javascript:(function(){s=document.createElement('script');s.type='text/javascript';s.src='http://localhost:3000/js/main.js?v='+parseInt(Math.random()*99999999);document.body.appendChild(s);st=document.createElement('link');st.rel='stylesheet';st.media='all';st.href='http://localhost:3000/css/global.css?v='+parseInt(Math.random()*99999999);document.getElementsByTagName('head')[0].appendChild(st);})();") Add Bookmarklet
